# UniLoadBoard

./: .gitignore  README.md  history.bat
backend/: .env.example  pyproject.toml
backend/app/: aggregator.py  main.py  schemas.py
backend/app/adapters/: amazon_relay_mock.py  base.py  dat_mock.py  registry.py  truckstop_mock.py
backend/app/routes/: loads.py
backend/data/: amazon_relay_loads.json  dat_loads.json  truckstop_loads.json
backend/tests/: test_adapters.py
docs/: adapters.md  architecture.md
frontend/: .env.example  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/loads/[id]/: page.tsx
frontend/components/: BrokerContactSection.tsx  DirectShipperSection.tsx  LoadDetailCard.tsx  LoadFilters.tsx  LoadTable.tsx  SourceBadge.tsx
frontend/lib/: api.ts  types.ts  utils.ts
